# 0.00.25 (52322) May 23, 2011
Added Reset current tab menu option
Added Collection number and arrows to go between collections
Added "Reset Collection"
Slightly smaller collection area text and boxes
Fixed weird 3d structure bug
# 0.00.24 (52167) May 18, 2011
Re-added border/background around "Drag your molecule here"
# 0.00.23 (52081) May 17, 2011
# 0.00.22 (52080) May 17, 2011
Potential scissors/mouse flickering fix
Collection hint arrow: changed tip/tail locations and text position. Invisible on movement
Added smiley face to the complete dialog
Break molecule button changed to blue
Moved "3d" collection box button to inside of the black box, appears only when molecules are in the box.
# 0.00.21 (52022) May 17, 2011
Reset kit doesn't pull from boxes by default
Improved memory footprint
# 0.00.20 (51861) May 12, 2011
# 0.00.19 (51859) May 12, 2011
Added a developer control to change the collection box "highlight" border color used when it is full.
Added prevention of atoms in the same molecule "overlapping". Still allowing "square" formations.
Removed a few deprecated developer options
Added game-ding sound on collection box filled, with a sound on/off panel
Improved kit-generation algorithm
Added 3d button to the collection boxes
Dragged atom/molecule always in front of other atoms/molecules
Animated blue hint arrow, and added a text bubble
Orange button for "try with new molecules"
# 0.00.17 (51781) May 10, 2011
# 0.00.16 (51779) May 10, 2011
# 0.00.15 (51777) May 10, 2011
Included all possible molecules that can be made with the kits
Improved kit selection on 3rd tab
Improved bucket-atom handling
# 0.00.14 (51582) May 5, 2011
Changed single bond breaking cursor to scissors
3D icon has bolder text
# 0.00.13 (51325) Apr 29, 2011
Using new 3D icon and changed cursor for "breaking" bonds
# 0.00.12 (51317) Apr 29, 2011
Added i18n for molecule names
Molecules push each other relative to their approximate molecular weight