@@ -1,12 +1,15 @@
 package edu.colorado.phet.buildamolecule.view;
 
-import edu.colorado.phet.buildamolecule.BuildAMoleculeConstants;
 import edu.colorado.phet.buildamolecule.control.AllFilledDialogNode;
 import edu.colorado.phet.buildamolecule.control.CollectionPanel;
 import edu.colorado.phet.buildamolecule.model.CollectionList;
 import edu.colorado.phet.buildamolecule.model.KitCollection;
 import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction0;
+import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
+
+import static edu.colorado.phet.buildamolecule.BuildAMoleculeConstants.STAGE_SIZE;
+import static edu.colorado.phet.buildamolecule.BuildAMoleculeConstants.VIEW_PADDING;
 
 /**
  * Canvas (like its subclass) that shows kits, but also has a collection area to the right-hand side
@@ -29,7 +32,6 @@ public class MoleculeCollectingCanvas extends BuildAMoleculeCanvas {
         final KitCollectionNode kitCollectionNode = super.addCollection( collection );
 
         // show dialog the 1st time all collection boxes are filled
-        // TODO: should we have a different behavior when this happens a 2nd time? (they went back and re-filled one that they maybe reset?)
         collection.allCollectionBoxesFilled.addObserver( new SimpleObserver() {
             private boolean hasShownOnce = false;
             private AllFilledDialogNode allFilledDialogNode;
@@ -54,22 +56,20 @@ public class MoleculeCollectingCanvas extends BuildAMoleculeCanvas {
     }
 
     @Override protected void addChildren() {
-        CollectionPanel collectionAreaNode = new CollectionPanel( this, collectionList, singleCollectionMode ) {{
-            double collectionAreaPadding = 20;
-            setOffset( BuildAMoleculeConstants.STAGE_SIZE.width - getFullBounds().getWidth() - collectionAreaPadding, collectionAreaPadding );
+        CollectionPanel collectionAreaNode = new CollectionPanel( collectionList, singleCollectionMode, new VoidFunction1<SimpleObserver>() {
+            /**
+             In place so that we can notify this observer when the collection panel (and its associated collection boxes) are fully
+             * attached to the canvas. This is necessary, because we need to turn view => model coordinates and update the box model
+             * positions.
+             * @param simpleObserver Observer to add
+             */
+            public void apply( SimpleObserver simpleObserver ) {
+                collectionAttachmentListeners.add( simpleObserver );
+            }
+        }, toModelBounds ) {{
+            setOffset( STAGE_SIZE.width - getFullBounds().getWidth() - VIEW_PADDING, VIEW_PADDING );
         }};
         addWorldChild( collectionAreaNode );
-    }
-
-    /**
-     * In place so that we can notify this observer when the collection panel (and its associated collection boxes) are fully
-     * attached to the canvas. This is necessary, because we need to turn view => model coordinates and update the box model
-     * positions.
-     *
-     * @param observer
-     */
-    public void addCollectionAttachmentListener( SimpleObserver observer ) {
-        collectionAttachmentListeners.add( observer );
     }
 
 }
